<resources>
    <string name="app_name">Bookie</string>

    #bookie splash screen
    <string name="bookie_tag_line">Let\'s talk about books</string>

    #bookie main screen
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>

    #bookie login screen
    <string name="email_or_username">Email/Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>

    #preferred book genre
    <string name="book_genre_title">Pick Your Preferred Book Genres</string>
    <string name="next">Next</string>

    #book genres
    <string name="art">Art</string>
    <string name="crime">Crime</string>
    <string name="education">Education</string>
    <string name="history">History</string>
    <string name="biography">Biography</string>
    <string name="concepts">Concepts</string>
    <string name="fiction">Fiction</string>
    <string name="horror">Horror</string>
    <string name="chicklit">Chicklit</string>
    <string name="graphic_novel">Graphic</string>
    <string name="paranormal">Paranormal</string>
    <string name="short_stories">Short stories</string>

    #suggested book clubs
    <string name="suggested_book_clubs_topic">Suggested Book Clubs</string>
    <string name="book_club1"> The Legend of Mr. Roger</string>
    <string name="book_club2">It\'s for the Glamour</string>
    <string name="book_club3">Master and Apprentice</string>
    <string name="book_club4">Americanah</string>

    <string name="create_book_club">Create Book Club</string>
    <string name="skip">Skip</string>

    #create book club
    <string name="topic_create_book_club">Create Book Club</string>
    <string name="name_of_book_club">Name of Book Club</string>
    <string name="book_club_type">Book Club Type</string>
    <string name="book_genres">Book Genres</string>
    <string name="maximum_number_users">Set Maximum Number of Users</string>
    <string name="title_activity_my_book_clubs">MyBookClubsActivity</string>

    <string name="title_home">Bookie: My Book Clubs</string>
    <string name="title_dashboard">Bookie: Search Book Club</string>
    <string name="title_notifications">Bookie: My Profile</string>

    <string name="title_home_menu">My Book Clubs</string>
    <string name="title_dashboard_menu">Search Book Club</string>
    <string name="title_notifications_menu">My Profile</string>

    <string name="open_forum_btn">Open Forum</string>

    <string name="Lakisha">Lakisha</string>
    <string name="preferred_genres">Preferred Genres</string>
    <string name="horror_list">1. Horror</string>
    <string name="chicklit_list">2. Chicklit</string>
    <string name="adult_list">3. Adult</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="log_out">Log Out</string>

    <string name="search_bk">Search for Book Clubs</string>
    <string name="open_forum">Open forum</string>

    <string name="book_info">Book Info:\n Members: \n Topic: \n</string>
    <string name="join">Join</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="submit">Submit</string>
    <string name="createBookclub">Create Book Club</string>
    <string name="about_info">Name of Organisation: Bookie Limited\n \n We love books and we love people who love books \n Version:1.1.0 \n
    \n Last updated:2020
    </string>
    <string name="email_error"> Input Email</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="password_error">Input Password</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="username_error">Input username</string>
</resources>
