<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPurple"
    android:layout_height="match_parent"
    tools:context=".ChooseBkGenreActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/appNameTv"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="50dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="84dp">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:text="@string/book_genre_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@+id/appNameTv"
        tools:layout_editor_absoluteX="0dp">

    </TextView>

    <GridLayout

        android:id="@+id/gridLayout"
        android:layout_width="335dp"
        android:layout_height="182dp"
        android:columnCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/checkBox"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/art" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biography" />

        <CheckBox
            android:textColor="@color/colorWhite"
            android:id="@+id/checkBox12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chicklit" />

        <CheckBox
            android:id="@+id/checkBox14"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crime" />



        <CheckBox
            android:id="@+id/checkBox13"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/concepts" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crime" />

        <CheckBox
            android:id="@+id/checkBox11"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiction" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graphic_novel" />

        <CheckBox
            android:id="@+id/checkBox9"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history" />


        <CheckBox
            android:id="@+id/checkBox7"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horror" />

        <CheckBox
            android:id="@+id/checkBox8"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paranormal" />

    </GridLayout>

    <Button
        android:id="@+id/button144"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="72dp"
        android:background="@drawable/round_buttonblue"
        android:padding="20dp"
        android:text="@string/next"
        android:textColor="@color/colorWhite"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"

        />
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>