<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="87dp">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:src="@drawable/user"
            android:visibility="invisible">

        </ImageView>

        <TextView
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:text="@string/Lakisha"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/preferred_genres">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horror_list"
            android:textSize="18sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chicklit_list"
            android:textSize="18sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adult_list"
            android:textSize="18sp">

        </TextView>

        <LinearLayout
            android:layout_width="418dp"
            android:layout_height="261dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="138dp"
                    android:layout_height="63dp"
                    android:src="@drawable/settings">

                </ImageView>

                <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="63dp"
                    android:text="@string/settings"
                    android:textSize="40dp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="138dp"
                    android:id="@+id/info_image"
                    android:clickable="true"
                    android:layout_height="63dp"
                    android:src="@drawable/info" />

                <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="63dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/about_us"
                    android:textSize="40dp">

                </TextView>
            </LinearLayout>


            <TextView
                android:textColor="@color/colorSkyBlue"
                android:id="@+id/logout_Text"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:layout_gravity="center"
                android:text="@string/log_out"
                android:textSize="25dp">

            </TextView>
 

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>