<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:theme="@style/SplashTheme"
    android:background="@color/colorPurple"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="40dp"
            android:clickable="true"
            android:onClick="mainPage"
            android:src="@drawable/back"
            android:id="@+id/back_imgView"
            android:layout_height="40dp">

        </ImageView>


        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="70dp"
            android:textColor="@color/colorWhite"
            android:fontFamily="cursive"
            android:textAllCaps="true"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:text="@string/sign_up"
            android:textSize="25dp"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:layout_height="50dp">

        </TextView>


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/username"
            android:textSize="17dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite">

        </TextView>
        <EditText
            android:id="@+id/username_editText"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/email"
            android:textSize="17dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite">

        </TextView>
        <EditText
            android:id="@+id/email_Edittext"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/password"
            android:textSize="17dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite">

        </TextView>
        <EditText
            android:id="@+id/psswd_EditText"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>


        <View
            android:layout_width="match_parent"
            android:layout_height="20dp">

        </View>

        <Button
            android:id="@+id/btn_sign_up"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="25dp"
            android:onClick="the_signup"
            android:layout_width="wrap_content"
            android:background="@drawable/round_buttonblue"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="20dp"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/back_text_view"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="25dp"
            android:onClick="back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:text="Back to Log In" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>