<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/text_home"
            android:visibility="gone"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="45dp">

        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp">

        </View>

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"
            android:text="@string/book_club1"
            android:textSize="20sp">

        </TextView>

        <Button
            android:id="@+id/forum1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@color/colorDarkBlue"
            android:padding="6dp"
            android:textColor="@color/colorWhite"
            android:text="@string/open_forum"
            android:textAllCaps="false">

        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"
            android:text="@string/book_club4"
            android:textSize="20sp">

        </TextView>

        <Button
            android:id="@+id/forum2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@color/colorDarkBlue"
            android:padding="6dp"
            android:textColor="@color/colorWhite"
            android:text="@string/open_forum"
            android:textAllCaps="false">

        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"
            android:text="@string/book_club3"
            android:textSize="20sp">

        </TextView>

        <Button
            android:id="@+id/forum3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="200dp"
            android:background="@color/colorDarkBlue"
            android:padding="6dp"
            android:text="@string/open_forum"
            android:textAllCaps="false">

        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"
            android:text="@string/book_club4"
            android:textSize="20sp">

        </TextView>

        <Button
            android:id="@+id/forum4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginStart="200dp"
            android:background="@color/colorDarkBlue"
            android:padding="6dp"
            android:textColor="@color/colorWhite"
            android:text="@string/open_forum"
            android:textAllCaps="false">

        </Button>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>