<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:theme="@style/SplashTheme"
    android:background="@color/colorPurple"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="50dp"
            android:clickable="true"
            android:onClick="mainPage"
            android:src="@drawable/back"
            android:id="@+id/back_imgView"
            android:layout_height="50dp">

        </ImageView>


        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="70dp"
            android:textColor="@color/colorWhite"
            android:fontFamily="cursive"
            android:textAllCaps="true"
            android:layout_height="wrap_content"
            android:padding="10dp">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:text="@string/log_in"
            android:textSize="25dp"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:layout_height="50dp">

        </TextView>


        <View
            android:layout_width="match_parent"
            android:layout_height="50dp">

        </View>
<TextView
    android:layout_width="wrap_content"
    android:text="@string/email_or_username"
    android:layout_height="wrap_content"
    android:textColor="@color/colorWhite">

</TextView>
        <EditText
            android:id="@+id/lgnText_username"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content">

        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/password"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite">

        </TextView>
        <EditText
            android:id="@+id/lgnText_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

        <TextView
            android:id="@+id/reset_psswd_text_view"
            android:textColor="@color/colorWhite"
            android:textStyle="italic"
            android:textSize="25dp"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="20dp"
            android:text="Forgot Password?" />

        <Button
            android:id="@+id/button_logging_in"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_width="wrap_content"
            android:background="@drawable/round_buttongreen"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="20dp"
            android:text="@string/log_in" />

        <TextView
            android:id="@+id/back_text_view"
            android:textColor="@color/colorBlack"
            android:textSize="25dp"
            android:onClick="back_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="20dp"
            android:text="Back to Sign Up" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>